add tests for PersonController(index page) and PersonServiceImpl(findById)